src/objects/OnSaleDateTime__c.object
<CustomObject>
    <description>Dates that tickets are on sale or pre sale or other important dates around ticket sales/announcements to identify</description>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>On Sale Date Times</relationshipLabel>
        <relationshipName>OnSaleDateTimes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventTicketAgency__c</fullName>
        <label>Event-Ticket Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EventTicketAgency__c.EventDateTime__c</field>
                <operation>equals</operation>
                <valueField>$Source.EventDateTime__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>EventTicketAgency__c</referenceTo>
        <relationshipLabel>On Sale Date Times</relationshipLabel>
        <relationshipName>OnSaleDateTimes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaleEndDate__c</fullName>
        <label>Sale End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SaleEndTime__c</fullName>
        <label>Sale End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaleName__c</fullName>
        <label>Sale Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaleStartDate__c</fullName>
        <label>Sale Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SaleStartTime__c</fullName>
        <label>Sale Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ticket_Limit_Per_Purchaser__c</fullName>
        <label>Ticket Limit Per Purchaser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public On Sale</fullName>
                </value>
                <value>
                    <fullName>Pre Sale</fullName>
                </value>
                <value>
                    <fullName>Fan Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>On Sale Date Time</label>
    <nameField>
        <displayFormat>OSD-{000000}</displayFormat>
        <label>On Sale Date Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On Sale Date Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_TimeFormat</fullName>
        <active>true</active>
        <description>Time fields must be in format HH:MM AM|PM</description>
        <errorConditionFormula>NOT(REGEX( SaleEndTime__c , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;)) 
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp; 
SaleEndTime__c  &lt;&gt; NULL 
|| 

NOT(REGEX( SaleStartTime__c  , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;)) 
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp; 
SaleStartTime__c &lt;&gt; NULL</errorConditionFormula>
        <errorMessage>Time fields must be in format HH:MM AM|PM</errorMessage>
    </validationRules>
</CustomObject>